tests/samples/negative/traits/trait_impl_private_trait.ax
module trait_impl_private_trait;

import samplelib.traits as traits;

struct File {
    value: i32;
}

impl traits.Hidden for File {
    fn read(self: &File) -> i32 {
        return 0;
    }
}

fn main() -> i32 {
    return 0;
}
